[package]
name = "iota-block-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = { version = "0.15.7", default-features = false }
iota-sdk = "1.1.4"
tokio = { version = "1.36.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
], optional = true }

